@@ -15,7 +15,12 @@ else
     mkdir -p "$OUT_PATH"
   fi
 
-  javac -Xdiags:verbose -cp "$CLS_PATH" -d "$OUT_PATH" "${JAVA_PATH}"/tests/detailed/*.java "${JAVA_PATH}"/tests/junittests/*.java "${JAVA_PATH}"/tests/simple/*.java "${JAVA_PATH}"/org/cef/*.java "${JAVA_PATH}"/org/cef/browser/*.java "${JAVA_PATH}"/org/cef/callback/*.java "${JAVA_PATH}"/org/cef/handler/*.java "${JAVA_PATH}"/org/cef/misc/*.java "${JAVA_PATH}"/org/cef/network/*.java
+  JAVAC_FLAGS="--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED \
+               --add-exports=java.desktop/sun.awt=ALL-UNNAMED \
+               --add-exports=java.desktop/sun.lwawt=ALL-UNNAMED \
+               --add-exports=java.desktop/sun.lwawt.macosx=ALL-UNNAMED"
+
+  javac -Xdiags:verbose $JAVAC_FLAGS -cp "$CLS_PATH" -d "$OUT_PATH" "${JAVA_PATH}"/tests/detailed/*.java "${JAVA_PATH}"/tests/junittests/*.java "${JAVA_PATH}"/tests/simple/*.java "${JAVA_PATH}"/org/cef/*.java "${JAVA_PATH}"/org/cef/browser/*.java "${JAVA_PATH}"/org/cef/callback/*.java "${JAVA_PATH}"/org/cef/handler/*.java "${JAVA_PATH}"/org/cef/misc/*.java "${JAVA_PATH}"/org/cef/network/*.java
 
   # Copy MANIFEST.MF
   rsync -a "${JAVA_PATH}"/manifest/MANIFEST.MF $OUT_PATH/manifest/
